jol is replaced by org.ehcache.sizeof